--- a/styles/main.css
+++ b/styles/main.css
@@ -70,7 +70,7 @@ header{
     font-weight: 600;
     text-decoration: underline;
     color:#486d12;
-    margin-top: 5px;
+    margin-top: 50px;
 }
 
 #bottom-right-plant{
@@ -130,6 +130,7 @@ footer{
     padding-right: 10px;
     border-radius: 10%;
     display: none;
+    margin-top: 10px;
 }
 
 .daylabel{
@@ -139,15 +140,21 @@ footer{
     background-color: #486d12;
     border-radius: 50%;
     border:none;
+    color:whitesmoke;
 }
 .daybtn:disabled{
     background-color: gray;
     opacity: .5;    
 }
 
-.daylabel,.daybtn{
-    width:30px;
-    height:30px;
+.daylabel{
+    width:35px;
+    height:35px;
+    margin:1px;
+}
+.daybtn{
+    width:25px;
+    height:25px;
     margin:1px;
 }
 
@@ -155,8 +162,11 @@ footer{
     margin-left: auto;
     margin-right: auto; 
     width:120px;
-    display:none;
    
+   
+}
+#backToTodaydiv{
+    visibility: hidden;
 }
 #showHidediv{
     display: block;
@@ -165,6 +175,8 @@ footer{
 }
 #backToToday{
     background-color: #486d12;
+    color: whitesmoke;
+    border-radius:20%;    
 }
   
 #imgcal{   
@@ -172,22 +184,75 @@ footer{
 }
 
 #prev,#next,#monthName,#yearName{
-    font-size: 20px;
+    font-size: 15px;
     /* margin:5px; */
     color:#503009;
+    font-weight: 400;
     background-color: #e2b37b;
+
     
 }
 #prev,#next{
     visibility: hidden;
+    border:none;
+    border-radius: 50%;
 }
 
 .monthrow{
     background-color: #e2b37b;
     border: 1px solid;
-    margin-top: 2px;
+    margin-top: 10px;
     /* padding:5px; */
     /* border-radius: 5px; */
+}
+
+.timeSlotsContainer{
+    margin-top: 20px;
+}
+
+.timeSlotDiv{
+    height: 50px;
+    border:1px solid rgb(125, 126, 124);
+    border-left: none;
+}
+
+.timeSlotLabel{
+   height: 45px;
+   width:34px; 
+   border-right:1px solid rgb(125, 126, 124); 
+   margin:0px;
+   font-size: 15px;
+   font-weight: 600;
+}
+
+.timeSlotItemText{
+    background-color: gray;
+    height: 47px;
+    width:75%; 
+    /* border:none; */
+    display: inline-block;
+    margin-left:2px;
+}
+
+.inputItemText{
+    height: 47px;
+    width:99%; 
+    border:none;
+    /* outline: none; */
+   /* border-left:1px solid rgb(125, 126, 124);  */
+   margin-left:2px;
+   background-color: transparent;
+   /* margin:5px; */
+}
+
+.inputItemText:focus{
+    /* border:none; */
+    outline-color: #1181bd;
+    outline-style: solid 2px;
+    /* border-color: red;
+    -webkit-border-radius: 0 !important;
+    -moz-border-radius: 0 !important;
+    border-radius: 0px !important; */
 }
 
 @media only screen and (max-width:280px){
