--- a/styles/main.css
+++ b/styles/main.css
@@ -313,6 +313,9 @@ footer{
     position: absolute;
     top:8px;
     left:5%;
+    border:none;
+    outline: none;
+    border-radius: 50%;
 }
 
 .timeSlotItemBtnsSpan{
@@ -335,9 +338,16 @@ footer{
     width: 20px;
     height:20px;
     margin-left:2%;
-    background-color: aquamarine;
+    background-color: whitesmoke;
     position: relative;
     top:10%;
+    border:none;
+    outline: none;
+    border-radius: 50%;
+    -webkit-appearance: none;
+}
+.inputItemCheck:checked{
+    background-color: purple;
 }
 .messagediv{
     /* height: 40px; */
@@ -354,6 +364,43 @@ footer{
     margin-left:auto;
     margin-right: auto;   
     display: none;
+}
+
+ul li {
+    display:inline;
+  }
+
+.smallbox{
+width: 15px;
+height: 15px;
+border-radius: 1px;
+content: " ";
+display: inline-block;
+}
+.legendDiv{
+    font-size: 12px;
+}
+.graybox{
+background-color: gray;
+border: 1px solid black;
+}
+.orangebox{
+background-color: #e2b37b;
+border: 1px solid black;
+}
+.greenbox{
+    background-color: #98FB98;
+    border: 1px solid black;
+ }
+.purplecircle{
+    background-color: purple;
+    border: 1px solid black;
+    border-radius: 50%;
+}
+.whitecircle{
+    background-color: whitesmoke;
+    border: 1px solid black;
+    border-radius: 50%;
 }
 
 @media only screen and (max-width:280px){
